--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -9,17 +9,20 @@
         "type-check": "tsc --noEmit"
     },
     "dependencies": {
-        "express": "^4.21.2",
+        "adm-zip": "^0.5.16",
+        "axios": "^1.7.9",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
-        "axios": "^1.7.9"
+        "express": "^4.21.2",
+        "iconv-lite": "^0.7.1"
     },
     "devDependencies": {
+        "@types/adm-zip": "^0.5.7",
+        "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
         "@types/node": "^22.10.2",
-        "@types/cors": "^2.8.17",
-        "typescript": "^5.7.2",
+        "nodemon": "^3.1.9",
         "ts-node": "^10.9.2",
-        "nodemon": "^3.1.9"
+        "typescript": "^5.7.2"
     }
 }
